Fixed Slideshow Position on Smaller Windows
Adjusted the media queries so that the slideshow displays correctly on narrower screen widths. Also made the slideshow arrows white for useability.

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ header h1 {
 button {
     background: none;
     border: 0;
+    color: #F7F7F7;
 }
 .dot-wrap {
     width: 100%;
@@ -140,6 +141,14 @@ main {
         gap: 2rem;
         width: auto;
         max-width: 100vw;
+    }
+    header {
+        display: flex;
+        flex-direction: column;
+    }
+    header figure {
+        display: flex;
+        Justify-content: center;
     }
     main {
         max-width: 100vw;
